# molar

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  last.gro  new.xtc
crates/molar_bin/: Cargo.toml  README.md
crates/molar_bin/src/: command_last.rs  command_rearrange.rs  command_solvate.rs  command_tip3_to_tip4.rs  main.rs
crates/molar_gromacs/: Cargo.toml  README.md  build.rs
crates/molar_gromacs/gromacs/: CMakeLists.txt  cmake_to_cargo.txt.in  gromacs_version_info.h.in  run_bindgen.sh  wrapper.cpp  wrapper.hpp  wrapper_test.cpp
crates/molar_gromacs/src/: gromacs_bindings.rs  lib.rs
crates/molar_molfile/: Cargo.toml  README.md  build.rs
crates/molar_molfile/molfile/: CMakeLists.txt  pdbplugin.c  register_plugins.c
crates/molar_molfile/src/: molfile_bindings.rs
crates/molar_powersasa/: Cargo.toml  README.md  build.rs
crates/molar_powersasa/powersasa/: CMakeLists.txt  bindings.cpp  power_diagram.h  power_sasa.h  sasatest  sasatest.cpp  testincludes.h  wrapper.cpp  wrapper.hpp
crates/molar_powersasa/src/: lib.rs  powersasa_bindings.rs
crates/molar_python/: Cargo.toml  README.md  pyproject.toml
crates/molar_python/python/molar/: __init__.py  molar.pyi
crates/molar_python/src/: lib.rs  periodic_box.rs  test.py
crates/molar_sasa/: Cargo.toml  build.rs
crates/molar_sasa/powersasa/: CMakeLists.txt  wrapper.cpp  wrapper.h
crates/molar_sasa/src/: lib.rs  main.rs
crates/molar_xdrfile/: Cargo.toml  build.rs
crates/molar_xdrfile/src/: lib.rs  xdrfile_bindings.rs
molar/: Cargo.toml  build.rs
molar/benches/: comparison_large.rs  comparison_small.rs  fit_benchmark.rs  within_size_bench.rs
molar/benches/comparison_with_other_libs/cpptraj/: align.in
molar/benches/comparison_with_other_libs/gromacs/: gmx_bench.py
molar/benches/comparison_with_other_libs/mdanalysis/: within_size_bench.py
molar/crates/molar_xdrfile/: Cargo.toml
molar/src/: aliases.rs  analysis_task.rs  atom.rs  atom_storage.rs  connectivity.rs  core.rs  distance_search.rs  dss.rs  dssp.rs  io.rs  lib.rs  measure.rs  modify.rs  ndx_file.rs  par.rs  particle.rs  perception.rs  periodic_box.rs  periodic_table.rs  providers.rs  sasa.rs  secondary_structure.rs  selection.rs  seq_align.rs  state.rs  topology.rs  voronoi_cell.rs
molar/src/core/: connectivity.rs  distance_search.rs  measure.rs  modify.rs  ndx_file.rs  particle.rs  periodic_box.rs  providers.rs  selection.rs  selection_parser.rs  state.rs  system.rs  topology.rs
molar/src/core/selection/: holder.rs  kinds.rs  par_split.rs  sel.rs  sel2.rs  sel_expl.rs  sel_shared.rs  sel_split.rs  selection_def.rs  source.rs  system.rs  traits.rs  utils.rs
molar/src/core/selection_parser/: ast.rs  grammar.rs  grammar2.rs  grammar3.rs
molar/src/io/: cpt_handler.rs  dcd_handler.rs  gro_handler.rs  itp_handler.rs  netcdf_handler.rs  pdb_handler.rs  sdf_handler.rs  tpr_handler.rs  trr_handler.rs  vmd_molfile_handler.rs  xtc_handler.rs  xyz_handler.rs
molar/src/selection/: ast.rs  error.rs  grammar.rs  par_split.rs  sel.rs  selection_def.rs  selection_error.rs  selection_expr.rs  system.rs  traits.rs  utils.rs
molar/src/selection_parser/: grammar2.rs
molar/tests/: benzene.nc  benzene.xtc  gen_tests_pteros.py  gen_tests_vmd.tcl  generated_selection_tests.in  generated_vmd_tests.in  get_selection_tests.tcl  multi.gro  paper_benchmarks.rs  search.py  state.cpt  test.xyz  test_netcdf.rs  topol.tpr
molar_bin/: Cargo.toml
molar_bin/src/: command_last.rs  command_rearrange.rs  command_solvate.rs  command_tip3_to_tip4.rs  main.rs
molar_ff/: Cargo.toml  README.md
molar_ff/assets/: espaloma_charge.onnx
molar_ff/src/: charge.rs  gaff.rs  lib.rs
molar_ff/src/gaff/: ATOMTYPE_GFF2.DEF  aromatic.rs  conjugation.rs  matcher.rs  props.rs  ring.rs  tables.rs
molar_ff/tests/: gaff_parity.rs
molar_ff/tests/data/: espaloma_fixture.json
molar_ff/tests/data/gaff_ref/: SUMMARY.md  references.json  references_espaloma.json  references_gaff2.json
molar_ff/tests/data/gaff_ref/ac/: 1,2-Propanediol.ac  1,3-Propanediol.ac  1,4-Butanediol.ac  1,6-Hexanediol.ac  11-Dehydrocorticosterone.ac  11-Deoxycortisol.ac  11-b-Hydroxyprogesterone.ac  12-Hydroxydodecanoic_acid.ac  2,3-Dideoxyadenosine.ac  2,3-Dideoxyinosine.ac  2,3_Dideoxycytidine.ac  2,4-Dihydroxybenzoic_acid.ac  2,4_Dibromoestradiol.ac  2-Butane-1,4-diol.ac  2-Deoxy-3-thiacytidine.ac  2-Deoxyadenosine.ac  2-Hydroxybutyric_acid.ac  2-Hydroxycaproic_acid.ac  2-Hydroxynicotinic_acid.ac  2-Hydroxyvaleric_acid.ac  2-Naphtolic_acid.ac  2n-Octylmalonic_acid.ac  3,4-Dihydroxyphenylacetic_acid.ac  3,5-Dichlorobenzoic_acid.ac  Acebutolol.ac  (+565 more)
molar_ff/tools/: gen_tables.py
molar_gromacs/: Cargo.toml  build.rs
molar_gromacs/gromacs/: wrapper.cpp  wrapper.hpp
molar_gromacs/src/: gromacs_bindings.rs  lib.rs
molar_membrane/: Cargo.toml  README.md
molar_membrane/data/: inp.toml  linp.toml  lipid_species.toml
molar_membrane/src/: lib.rs  lipid.rs  lipid_group.rs  lipid_molecule.rs  lipid_properties.rs  lipid_species.rs  main.rs  stats.rs  surface.rs  vmd_visual.rs
molar_membrane/tests/: cg.toml  traj_comp.xtc
molar_molfile/: Cargo.toml  build.rs
molar_molfile/molfile/: bindings.h  register_plugins.c
molar_molfile/src/: lib.rs
molar_powersasa/: Cargo.toml  build.rs
molar_powersasa/powersasa/: power_diagram.h  wrapper.cpp  wrapper.h
molar_powersasa/src/: lib.rs
molar_python/: Cargo.toml  README.md  pyproject.toml
molar_python/pymolar-f64-pkg/: pyproject.toml
molar_python/pymolar-f64-pkg/python/pymolar_f64/: __init__.py  molar.pyi
molar_python/python/molar/: __init__.py
molar_python/python/pymolar/: __init__.py  molar.pyi
molar_python/scripts/: generate_sphinx_docs.py
molar_python/src/: atom.rs  file_handler.rs  lib.rs  membrane.rs  particle.rs  periodic_box.rs  selection.rs  system.rs  test.py  topology_state.rs  utils.rs
molar_python/test/: membrane_order.py  membrane_test.py  test.py
molar_python/tests/: test.py  test_2.py
molar_xdrfile/: Cargo.toml  README.md
molar_xdrfile/xdrfile/: bindings.h  xdrfile.c
src/xdrfile/: CMakeLists.txt
(+700 files in other folders)
