[workspace]
members = [
"molar",
"molar_molfile",
"molar_xdrfile",
"molar_gromacs",
"molar_powersasa",
"molar_bin", 
"molar_python", 
"molar_membrane"
]
resolver = "2"

[workspace.package]
version = "1.1.1"
rust-version = "1.83"
edition = "2021"
authors = ["Semen Yesylevskyy <yesint4@yahoo.com>"]
license = "Artistic-2.0"
homepage = "https://github.com/yesint/molar"
repository = "https://github.com/yesint/molar"
documentation = "https://docs.rs/molar"
readme = "README.md"
keywords = ["MD", "science", "trajectory", "modeling"]
categories = ["science", "simulation", "external-ffi-bindings"]
description = "Molar is a rust library for analysis of MD trajectories and molecular modeling"

[workspace.dependencies]
nalgebra = ">=0.33"
peg = "0.8.5"
regex = "1.12.2"
thiserror = "2.0.17"
log = "0.4.29"
cc = { version = "1.2.49", features = ["parallel"] }
comfy-table = "7.2"
sorted-vec = "0.8.10"
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
clap = {version = "4.5.53", features=["derive"]}
triomphe = "0.1.15"
rayon = "1.11.0"
compact_str = "0.9.0"
