[workspace]
members = [
"molar",
"molar_gromacs",
"molar_bin",
"molar_python",
"molar_membrane"
]
resolver = "2"

[workspace.package]
version = "1.5.0"
rust-version = "1.83"
edition = "2021"
authors = ["Semen Yesylevskyy <yesint4@yahoo.com>"]
license = "Artistic-2.0"
homepage = "https://github.com/yesint/molar"
repository = "https://github.com/yesint/molar"
documentation = "https://docs.rs/molar"
readme = "README.md"
keywords = ["MD", "science", "trajectory", "modeling"]
categories = ["science", "simulation", "external-ffi-bindings"]
description = "Molar is a rust library for analysis of MD trajectories and molecular modeling"

[workspace.dependencies]
# Capped below 0.35: the `numpy` crate (molar_python) only supports nalgebra
# <0.35, and an unbounded `>=` lets molar/powersasa float to 0.35 while numpy
# stays on 0.34, producing two incompatible nalgebra types. Bump this in lockstep
# with numpy's nalgebra support.
nalgebra = "0.34"
peg = "0.8.5"
regex = "1.12.2"
thiserror = "2.0.17"
log = "0.4.29"
cc = { version = "1.2.49", features = ["parallel"] }
sorted-vec = "0.8.10"
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
clap = {version = "4.5.53", features=["derive"]}
triomphe = "0.1.15"
rayon = "1.11.0"
tinystr = ">=0.8.2"
