[package]
name = "molar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = ["tests/*.xtc"]
readme = "../README.md"

[dependencies]
# Workspace member crates
molar_gromacs = { path = "../molar_gromacs", version = "1.0.0" }

# Normal dependencies
thiserror.workspace = true
nalgebra.workspace = true
#nalgebra-lapack.workspace = true
peg.workspace = true
regex.workspace = true
log.workspace = true
num-traits = "0.2.16"
itertools = "0.14.0"
rustc-hash = "2.1.0"
triomphe = { version = "0.1.14", default-features = false, features = ["std"] }
sorted-vec.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
rayon.workspace = true
tinystr.workspace = true
molly = {version = "0.5.1", git = "https://github.com/ma3ke/molly.git"}
powersasa = {version = ">=0.1", git = "https://github.com/yesint/powersasa-llm.git"}
netcdf = { version = "0.12", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[features]
netcdf = ["dep:netcdf"]
gen_bindings = ["molar_gromacs/gen_bindings"]

# [[bench]]
# name = "fit_benchmark"
# harness = false

# [[bench]]
# name = "comparison_small"
# harness = false

# [[bench]]
# name = "comparison_large"
# harness = false

[package.metadata.docs.rs]
# Prevents CI builds from building C/C++ dependences
no-default-features = true
