[package]
name = "molar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = [
    "tests/",
    "benches/comparison_with_other_libs/",
]
readme = "../README.md"

[dependencies]
# Normal dependencies
thiserror.workspace = true
nalgebra.workspace = true
#nalgebra-lapack.workspace = true
peg.workspace = true
regex.workspace = true
log.workspace = true
num-traits = "0.2.16"
itertools = "0.14.0"
rustc-hash = "2.1.0"
triomphe = { version = "0.1.14", default-features = false, features = ["std"] }
sorted-vec.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
tinystr.workspace = true
molly = {version = ">=0.6.1", git = "https://github.com/ma3ke/molly.git"}
powersasa = {version = ">=0.1", git = "https://github.com/yesint/powersasa-llm.git"}
netcdf = { version = "0.12", optional = true }
# Browser-safe `Instant`/`SystemTime`: a no-op re-export of `std::time` on native,
# backed by `performance.now()`/`Date.now()` on wasm (std's clock panics there).
web-time = "1"

# GROMACS tpr/cpt support links a C++ plugin via libloading, which has no wasm
# support. Native-only; the tpr/cpt handlers are #[cfg]-gated out on wasm.
# rayon is likewise native-only: wasm32 has no threads without SharedArrayBuffer,
# so molar runs single-threaded there via the `src/par.rs` serial shim.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
molar_gromacs = { path = "../molar_gromacs", version = "1.0.0" }
rayon.workspace = true

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[features]
netcdf = ["dep:netcdf"]
# Build the entire workspace in double precision (f64) instead of the
# default f32. All coordinates, masses, charges, energies and time
# fields switch to f64. f32-only on-disk file formats (XTC, DCD coords,
# NetCDF coords, TPR via the C ABI) convert at the IO boundary.
f64 = []

# [[bench]]
# name = "fit_benchmark"
# harness = false

# [[bench]]
# name = "comparison_small"
# harness = false

# [[bench]]
# name = "comparison_large"
# harness = false

[package.metadata.docs.rs]
# Prevents CI builds from building C/C++ dependences
no-default-features = true
