[package]
name = "molar_bin"
version = "0.8.3"
edition.workspace = true
authors.workspace = true

license.workspace = true
description = "Molar main binary "
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/molar_bin"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
molar = {version = "0.8.0", path = "../molar"}
clap = {version = "4.5", features=["derive"]}
env_logger = "0.11"
log.workspace = true
comfy-table.workspace = true
nalgebra.workspace = true
anyhow.workspace = true

[[bin]]
path = "src/main.rs"
name = "molar"
