[package]
name = "molar_ff"
version = "1.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GAFF/GAFF2 force-field atom typing for MolAR"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/molar_ff"
readme = "README.md"
keywords.workspace = true
categories.workspace = true
# The GAFF parity corpus (597 molecules, ~9 MB) is a development fixture only.
exclude = ["tests/data/gaff_ref"]

[dependencies]
molar = { version = "1.3.3", path = "../molar" }
thiserror.workspace = true
tract-onnx = { version = "0.21", optional = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = "1.0"

[features]
# Forward to molar to build in double precision.
f64 = ["molar/f64"]
# espaloma-charge partial charges via a bundled ONNX GNN (pulls in tract).
espaloma = ["dep:tract-onnx"]
