[package]
name = "molar_gromacs"
version = "0.8.2"
edition.workspace = true
authors.workspace = true
links = "stdc++"

license.workspace = true
description = "Gromacs FFI bindings for molar"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/molar_gromacs"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[build-dependencies]
bindgen = {version = "0.71.1", optional = true}
cc.workspace = true

[features]
gen_bindings = ["dep:bindgen"]
