[package]
name = "molar_gromacs"
version = "1.0.0"
edition.workspace = true
authors.workspace = true

license.workspace = true
description = "Gromacs dynamic plugin loader for molar"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/molar_gromacs"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
libloading = "0.8"

[build-dependencies]
cc.workspace = true
libloading = "0.8"
