[package]
name = "molar_membrane"
version = "0.8.3"
edition.workspace = true
authors.workspace = true

license.workspace = true
description = "Molar membrane toolkit"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/molar_membrane"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
molar = {version = "0.8.0", path = "../molar"}
anyhow.workspace = true
clap = {version = "4.5", features=["derive"]}
env_logger = "0.11"
log.workspace = true
comfy-table.workspace = true
nalgebra = {workspace = true, features = ["serde-serialize"]}
sorted-vec.workspace = true
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rayon = "1.10"
