[package]
name = "molar_membrane"
version = "0.10.0"
edition.workspace = true
authors.workspace = true

license.workspace = true
description = "Molar membrane toolkit"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/molar_membrane"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
molar = {version = "0.10.0", path = "../molar"}
anyhow.workspace = true
clap.workspace = true
triomphe.workspace = true
env_logger = "0.11"
log.workspace = true
comfy-table.workspace = true
nalgebra = {workspace = true, features = ["serde-serialize"]}
sorted-vec.workspace = true
serde.workspace = true
toml = "0.8"
rayon = "1.10"
rand = "0.9"
