[package]
name = "molar_membrane"
version = "1.3.4"
edition.workspace = true
authors.workspace = true

license.workspace = true
description = "Molar membrane toolkit"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/molar_membrane"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
molar = {version = "1.3.3", path = "../molar"}
anyhow.workspace = true
clap.workspace = true
triomphe.workspace = true
env_logger = "0.11"
log.workspace = true
nalgebra = {workspace = true, features = ["serde-serialize"]}
sorted-vec.workspace = true
serde.workspace = true
toml = "0.8"
rayon.workspace = true
rand = "0.9"
num-traits = "0.2"

[features]
# Forward to molar to build in double precision.
f64 = ["molar/f64"]
