[package]
name = "molar_python"

version.workspace = true
edition.workspace = true
authors.workspace = true

license.workspace = true
description = "python bindings for molar"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/molar_python"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "molar_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.23.3", features =["anyhow","extension-module"] }
pyo3-log = "0.12.1"
molar = {version = "0.8.0", path = "../molar"}
numpy = {version = "0.23.0", features = ["nalgebra"]}
anyhow = "1.0.90"
env_logger = "0.11"
log.workspace = true
