[package]
name = "molar_python"

version.workspace = true
edition.workspace = true
authors.workspace = true

license.workspace = true
description = "python bindings for molar"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/molar_python"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
name = "molar_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.27", features =["anyhow","extension-module"] }
pyo3-log = "0.13"
molar = {version = "0.10.0", path = "../molar"}
#molar_membrane = {version = "0.10.0", path = "../molar_membrane"}
numpy = {version = "0.27", features = ["nalgebra"]}
anyhow.workspace = true
env_logger = "0.11"
log.workspace = true
triomphe.workspace = true

[features]
gen_bindings = ["molar/gen_bindings"]
