[package]
name = "molar_python"

version.workspace = true
edition.workspace = true
authors.workspace = true

license.workspace = true
description = "python bindings for molar"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/molar_python"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
name = "molar_python"
# `rlib` in addition to `cdylib` so other Rust crates (e.g. the molar_vis native
# Python module) can depend on pymolar's pyclasses and reuse its module registration.
crate-type = ["cdylib", "rlib"]
# Doc comments here are Python-facing reStructuredText (Sphinx), not Rust:
# indented RST blocks would be picked up as Rust doctests and fail to compile.
doctest = false

[dependencies]
pyo3 = {version = "0.27", features =["extension-module"] }
pyo3-log = "0.13"
molar = {version = "2.0.0", path = "../molar"}
molar_ff = {version = "2.0.0", path = "../molar_ff", features = ["espaloma"]}
#molar_membrane = {version = "0.10.0", path = "../molar_membrane"}
numpy = {version = "0.27", features = ["nalgebra"]}
env_logger = "0.11"
log.workspace = true
triomphe.workspace = true

[features]
# Forward to molar to build pymolar in double precision (`pymolar-f64` wheel).
f64 = ["molar/f64", "molar_ff/f64"]
