[package]
name = "molar_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "molar_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.23.3", features =["anyhow","extension-module"] }
molar = {version = "0.7.0", path = "../..", default-features = false}
numpy = {version = "0.23.0", features = ["nalgebra"]}
anyhow = "1.0.90"
