[package]
name = "molar_sasa"
version.workspace = true
edition.workspace = true
authors.workspace = true

license.workspace = true
description = "powersasa FFI bindings for molar"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/molar_sasa"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
ascii.workspace = true
anyhow.workspace = true
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"